--- a/index.html
+++ b/index.html
@@ -9,13 +9,44 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
+    <script src="https://unpkg.com/feather-icons"></script>
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     
+    <!--NAVBAR-->
+    <nav class="navbar">
+        <a href="#" class="navbar-logo">kedai<span>Kopiku</span>.</a>
+
+        <div class="navbar-nav">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#menu">Menu</a>
+            <a href="#contact">Contact</a>
+        </div>
+
+        <div class="navbar-extra">
+            <a href="#" id="search"><i data-feather="search"></i></a>
+            <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i></a>
+            <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
+
+        </div>
+    </nav>
+
+    <!--hero section-->
+    <section class="hero" id="home">
+        <main class="content">
+            <h1>Mari Nikmati Secangkir <span>Kopi</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <a href="#" class="cta">Beli Sekarang</a>
+        </main>
+    </section>
 
     <script>
       feather.replace();
     </script>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
