--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kedai Kopi</title>
 
+    <link rel="icon" type="image/x-icon" href="assets/logo-kopi2.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -42,6 +44,114 @@
             <a href="#" class="cta">Beli Sekarang</a>
         </main>
     </section>
+
+    <!--about section-->
+    <section class="about" id="about">
+        <h2><span>About</span> Us</h2>
+
+        <div class="row">
+            <div class="about-img">
+                <img src="assets/about-kopi.jpg" alt="about us">
+            </div>
+
+            <div class="content">
+                <h3>Kenapa memilih kopi kami?</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam quam amet doloremque omnis repudiandae aliquam laboriosam illum ea.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam quam amet doloremque omnis repudiandae aliquam laboriosam illum ea.</p>
+            </div>
+        </div>
+    </section>
+
+    <!--MENU SECTION-->
+    <section id="menu" class="menu">
+        <h2><span>Our</span> Menu</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, dolorum accusantium nobis nam error perferendis. Ipsum quas, eligendi explicabo illo cum odio doloribus ipsam enim quaerat exercitationem, sunt sit earum.</p>
+
+        <div class="row">
+            <div class="menu-card">
+                <img src="assets/menu1.jpg" alt="espresso" class="menu-card-img">
+                <h3 class="menu-card-title">- Espresso</h3>
+                <p class="menu-card-price">IDR 15K</p>
+            </div>
+
+            <div class="menu-card">
+                <img src="assets/menu1.jpg" alt="espresso" class="menu-card-img">
+                <h3 class="menu-card-title">- Espresso</h3>
+                <p class="menu-card-price">IDR 15K</p>
+            </div>
+
+            <div class="menu-card">
+                <img src="assets/menu1.jpg" alt="espresso" class="menu-card-img">
+                <h3 class="menu-card-title">- Espresso</h3>
+                <p class="menu-card-price">IDR 15K</p>
+            </div>
+
+            <div class="menu-card">
+                <img src="assets/menu1.jpg" alt="espresso" class="menu-card-img">
+                <h3 class="menu-card-title">- Espresso</h3>
+                <p class="menu-card-price">IDR 15K</p>
+            </div>
+
+            <div class="menu-card">
+                <img src="assets/menu1.jpg" alt="espresso" class="menu-card-img">
+                <h3 class="menu-card-title">- Espresso</h3>
+                <p class="menu-card-price">IDR 15K</p>
+            </div>
+
+            <div class="menu-card">
+                <img src="assets/menu1.jpg" alt="espresso" class="menu-card-img">
+                <h3 class="menu-card-title">- Espresso</h3>
+                <p class="menu-card-price">IDR 15K</p>
+            </div>
+        </div>
+    </section>
+
+    <!--contact section-->
+    <section id="contact" class="contact">
+        <h2><span>Contact</span> Us</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, obcaecati.</p>
+
+        <div class="row">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19038.238669739407!2d-1.4891422652343755!3d53.38298870000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487979dcdfc5d2af%3A0x9b882f9b20fbd29d!2sBuilder&#39;s%20Brew%20Cafe!5e0!3m2!1sid!2sid!4v1753367609173!5m2!1sid!2sid" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+
+            <form action="">
+                <div class="input-group">
+                    <i data-feather="user"></i>
+                    <input type="text" placeholder="Name">
+                </div>
+                <div class="input-group">
+                    <i data-feather="mail"></i>
+                    <input type="text" placeholder="Email">
+                </div>
+                <div class="input-group">
+                    <i data-feather="phone"></i>
+                    <input type="text" placeholder="Phone Number">
+                </div>
+                <button type="submit" class="btn">Submit</button>
+            </form>
+        </div>
+    </section>
+
+    <!--FOOTER-->
+    <footer>
+        <div class="social">
+            <a href="#"><i data-feather="instagram"></i></a>
+            <a href="#"><i data-feather="twitter"></i></a>
+            <a href="#"><i data-feather="facebook"></i></a>
+        </div>
+        
+        <div class="links">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#menu">Menu</a>
+            <a href="#contact">Contact</a>
+        </div>
+
+        <div class="credit">
+            <p>Created by <a href="">nibNibras</a>. | &copy; 2025.</p>
+        </div>
+    </footer>
+
 
     <script>
       feather.replace();
